--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
   - title: "Categories"
     url: /categories/
   - title: "Tags"
-    url: /Tags/
+    url: /tags/
   - title: "Archives"
     url: /year-archive/
   
