--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -49,7 +49,7 @@ en: &DEFAULT_EN
   search_placeholder_text    : "Enter your search term..."
   search_algolia_no_results  : "No results"
   results_found              : "Result(s) found"
-  back_to_top                : "Back to top"
+  back_to_top                : "Back to top 🚀"
 en-US:
   <<: *DEFAULT_EN
 en-CA:
@@ -640,7 +640,7 @@ ko: &DEFAULT_KO
   search_placeholder_text    : "검색어를 입력하세요..."
   search_algolia_no_results  :
   results_found              : "개 결과 발견"
-  back_to_top                : "맨 위로 이동"
+  back_to_top                : "Back to top 🚀"
 ko-KR:
   <<: *DEFAULT_KO
 
