--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ main:
     url: /
   - title: "Categories"
     url: /categories/
+  - title: "Fragments"
+    url: /fragments/
   - title: "Tags"
     url: /tags/
   - title: "Archives"
